--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,29 +5,39 @@
 :root {
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
-  --gradient-color-red: linear-gradient(90deg, 
-                          hsl(7, 89%, 46%) 15%,
-                          hsl(11, 93%, 68%) 100%);
-  --gradient-color-orange: linear-gradient(90deg, 
-                           hsl(22, 89%, 46%) 15%,
-                           hsl(54, 90%, 45%) 100%);
-  --gradient-color-yellow: linear-gradient(90deg, 
-                           hsl(54, 89%, 46%) 15%,
-                           hsl(92, 90%, 45%) 100%);
-  --gradient-color-green: linear-gradient(90deg, 
-                          hsl(92, 89%, 46%) 15%,
-                          hsl(92, 90%, 68%) 100%);
+  --gradient-color-red: linear-gradient(
+    90deg,
+    hsl(7, 89%, 46%) 15%,
+    hsl(11, 93%, 68%) 100%
+  );
+  --gradient-color-orange: linear-gradient(
+    90deg,
+    hsl(22, 89%, 46%) 15%,
+    hsl(54, 90%, 45%) 100%
+  );
+  --gradient-color-yellow: linear-gradient(
+    90deg,
+    hsl(54, 89%, 46%) 15%,
+    hsl(92, 90%, 45%) 100%
+  );
+  --gradient-color-green: linear-gradient(
+    90deg,
+    hsl(92, 89%, 46%) 15%,
+    hsl(92, 90%, 68%) 100%
+  );
   --text-color: #fff;
   --body-color: hsl(0, 0%, 11%);
   --container-color: hsl(0, 0%, 9%);
+  --status-battery-color: var(--gradient-color-green);
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Rubik', sans-serif;
+  --body-font: "Rubik", sans-serif;
 
   --biggest-font-size: 2.5rem;
-  --normal-font-size: .938rem;
-  --smaller-font-size: .75rem;
+
+  --normal-font-size: 0.938rem;
+  --smaller-font-size: 0.75rem;
 }
 
 /* Responsive typography */
@@ -35,7 +45,7 @@
   :root {
     --biggest-font-size: 2.75rem;
     --normal-font-size: 1rem;
-    --smaller-font-size: .813rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -53,6 +63,13 @@ body {
   color: var(--text-color);
 }
 
+body.light-mode {
+  --text-color: #000;
+  --body-color: #fff;
+  --container-color: #f5f5f5;
+  --status-battery-color: #000;
+}
+
 /*=============== BATTERY ===============*/
 .battery {
   height: 100vh;
@@ -67,14 +84,56 @@ body {
   height: 240px;
   background-color: var(--container-color);
   padding: 1.5rem 2rem;
-  border-radius: 1.5rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
 }
 
+.battery__card::before,
+.battery__card::after {
+  content: "";
+  position: absolute;
+  height: 8px;
+  background: var(--status-battery-color);
+  width: 100%;
+}
+
+.battery__card::before {
+  bottom: 0;
+  left: 0;
+  border-radius: 0 0 1.5rem 1.5rem;
+}
+
+.battery__card::after {
+  top: 0;
+  left: 0;
+  border-radius: 1.5rem 1.5rem 0 0;
+}
+
+.battery__error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--gradient-color-red);
+  padding: 1.5rem;
+  border-radius: 1.5rem 1.5rem;
+  font-size: 1.5rem;
+  letter-spacing: 1.5px;
+  transition: all 0.3s;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.battery__error:hover {
+  transform: scale(1.05);
+}
+
+.battery__error i {
+  font-size: 2rem;
+  margin-right: 0.5rem;
+}
+
 .battery__text {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .battery__percentage {
@@ -86,7 +145,7 @@ body {
   bottom: 1.5rem;
   display: flex;
   align-items: center;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
   font-size: var(--smaller-font-size);
 }
 
@@ -99,10 +158,15 @@ body {
   width: 75px;
   height: 180px;
   background-color: var(--container-color);
-  box-shadow: inset 20px 0 48px hsl(0, 0%, 16%), 
-              inset -4px 12px 48px hsl(0, 0%, 56%);
+  box-shadow: inset 20px 0 48px hsl(0, 0%, 16%),
+    inset -4px 12px 48px hsl(0, 0%, 56%);
   border-radius: 3rem;
   justify-self: flex-end;
+}
+
+.light-mode .battery__pill {
+  box-shadow: inset 20px 0 48px hsl(0, 0%, 96%),
+    inset -4px 12px 48px hsl(0, 0%, 86%);
 }
 
 .battery__level {
@@ -110,6 +174,16 @@ body {
   inset: 2px;
   border-radius: 3rem;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-charging{
+  display: none;
+  font-size: 2rem;
+  color: #fff;
+  z-index: 1;
 }
 
 .battery__liquid {
@@ -119,17 +193,17 @@ body {
   right: 0;
   height: 36px;
   background: var(--gradient-color-red);
-  box-shadow: inset -10px 0 12px hsla(0, 0%, 0%, .1), 
-              inset 12px 0 12px hsla(0, 0%, 0%, .15);
-  transition: .3s;
+  box-shadow: inset -10px 0 12px hsla(0, 0%, 0%, 0.1),
+    inset 12px 0 12px hsla(0, 0%, 0%, 0.15);
+  transition: 0.3s;
 }
 
 .battery__liquid::after {
-  content: '';
+  content: "";
   position: absolute;
   height: 8px;
   background: var(--gradient-color-red);
-  box-shadow: inset 0px -3px 6px hsla(0, 0%, 0%, .2);
+  box-shadow: inset 0px -3px 6px hsla(0, 0%, 0%, 0.2);
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -179,6 +253,26 @@ body {
   }
 }
 
+@keyframes animated-charging-battery {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 103%;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /* Liquid battery with gradient color */
 .gradient-color-red,
 .gradient-color-red::after {
@@ -204,7 +298,10 @@ body {
 /* For small devices */
 @media screen and (max-width: 320px) {
   .battery__card {
-    zoom: .8;
+    zoom: 0.8;
+  }
+  .battery__error {
+    font-size: 1rem;
   }
 }
 
@@ -213,11 +310,17 @@ body {
   .battery__card {
     width: 312px;
   }
+  .battery__error {
+    font-size: 1.25rem;
+  }
 }
 
 /* For large devices */
 @media screen and (min-width: 1024px) {
   .battery__card {
     zoom: 1.5;
+  }
+  .battery__error {
+    font-size: 1.5rem;
   }
 }
