--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,7 @@
   --text-color: #fff;
   --body-color: hsl(0, 0%, 11%);
   --container-color: hsl(0, 0%, 9%);
+  --percentage-battery: 100%;
   --status-battery-color: var(--gradient-color-green);
 
   /*========== Font and typography ==========*/
@@ -262,7 +263,7 @@ body.light-mode {
 
 @keyframes animated-charging-battery {
   0% {
-    height: 0;
+    height: var(--percentage-battery);
   }
   100% {
     height: 103%;
