--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,7 +62,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: all 0.3s ease-in-out;
+  transition: background-color 1s ease-in-out;
 }
 
 body.light-mode {
@@ -88,7 +88,7 @@ body.light-mode {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  transition: all 0.3s;
+  transition: all 1s;
 }
 
 .battery__card::before,
@@ -98,7 +98,7 @@ body.light-mode {
   height: 8px;
   background: var(--status-battery-color);
   width: 100%;
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
 
 .battery__card::before {
@@ -120,16 +120,16 @@ body.light-mode {
   background: var(--gradient-color-red);
   padding: 1.5rem;
   border-radius: 1.5rem 1.5rem;
-  transition: all 0.3s;
+  transition: all 0.5s;
   animation: fadeIn 0.3s ease-in-out;
 }
 
-.battery__error-text{
+.battery__error-text {
   font-size: 1.5rem;
   letter-spacing: 1.5px;
 }
 
-.battery__error-text a{
+.battery__error-text a {
   color: var(--text-color);
   transition: all 0.3s;
 }
@@ -141,10 +141,21 @@ body.light-mode {
 
 .battery__text {
   margin-bottom: 0.5rem;
+  transition: color 0.3s;
 }
 
 .battery__percentage {
   font-size: var(--biggest-font-size);
+  transition: color 0.3s;
+}
+
+.icon-theme {
+  position: absolute;
+  top: 1rem;
+  left: 0.5rem;
+  font-size: 1.25rem;
+  cursor: pointer;
+  transition: all 0.3s;
 }
 
 .battery__status {
@@ -154,6 +165,7 @@ body.light-mode {
   align-items: center;
   column-gap: 0.5rem;
   font-size: var(--smaller-font-size);
+  transition: color 0.3s;
 }
 
 .battery__status i {
@@ -169,6 +181,7 @@ body.light-mode {
     inset -4px 12px 48px hsl(0, 0%, 56%);
   border-radius: 3rem;
   justify-self: flex-end;
+  transition: all 0.5s;
 }
 
 .light-mode .battery__pill {
@@ -186,7 +199,7 @@ body.light-mode {
   align-items: center;
 }
 
-.icon-charging{
+.icon-charging {
   display: none;
   font-size: 2rem;
   color: #fff;
@@ -202,7 +215,7 @@ body.light-mode {
   background: var(--gradient-color-red);
   box-shadow: inset -10px 0 12px hsla(0, 0%, 0%, 0.1),
     inset 12px 0 12px hsla(0, 0%, 0%, 0.15);
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 .battery__liquid::after {
