--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,7 +74,7 @@ body.light-mode {
 
 /*=============== BATTERY ===============*/
 .battery {
-  height: 100vh;
+  height: 100dvh;
   display: grid;
   place-items: center;
 }
