--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,7 @@ body.light-mode {
 }
 
 .battery__error-text {
-  font-size: 1.5rem;
+  font-size: 0.75rem;
   letter-spacing: 1.5px;
 }
 
@@ -341,9 +341,6 @@ body.light-mode {
   .battery__card {
     zoom: 0.8;
   }
-  .battery__error {
-    font-size: 1rem;
-  }
 }
 
 /* For medium devices */
@@ -351,14 +348,35 @@ body.light-mode {
   .battery__card {
     width: 312px;
   }
-  .battery__error {
-    font-size: 1.25rem;
+  .battery__error-text {
+    font-size: 1rem;
+  }
+  .author {
+    font-size: 0.6rem;
+  }
+}
+
+@media screen and (min-width: 568px) {
+  .battery__card {
+    zoom: 1.2;
+  }
+  .battery__error-text {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .battery__card {
+    zoom: 1.3;
   }
 }
 
 @media screen and (min-width: 968px) {
-  .author {
-    font-size: 0.75rem;
+  .battery__card {
+    zoom: 1.4;
+  }
+  .battery__error-text {
+    font-size: 1.5rem;
   }
 }
 
@@ -366,11 +384,5 @@ body.light-mode {
 @media screen and (min-width: 1024px) {
   .battery__card {
     zoom: 1.5;
-  }
-  .battery__error {
-    font-size: 1.5rem;
-  }
-  .author {
-    font-size: 0.6rem;
   }
 }
